--- a/QuanLyKho_/GUI/GUI.csproj
+++ b/QuanLyKho_/GUI/GUI.csproj
@@ -38,6 +38,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.DirectoryServices" />
     <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -50,6 +51,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ChitietBaoCao.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ChitietBaoCao.Designer.cs">
+      <DependentUpon>ChitietBaoCao.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -112,6 +119,9 @@
     <Compile Include="UC_XuatKho.Designer.cs">
       <DependentUpon>UC_XuatKho.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="ChitietBaoCao.resx">
+      <DependentUpon>ChitietBaoCao.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
